# common_msgs

./: .gitignore  CMakeLists.txt  README.md  package.xml
audio_msgs/: audio.proto  audio_common.proto  audio_event.proto
basic_msgs/: direction.proto  drive_event.proto  drive_state.proto  error_code.proto  geometry.proto  header.proto  pnc_point.proto  vehicle_id.proto  vehicle_signal.proto
chassis_msgs/: chassis.proto
cmake/: common_msgs-config.cmake.in  openbot_bridge-config.cmake.in
config_msgs/: vehicle_config.proto
control_msgs/: control_cmd.proto
localization_msgs/: imu.proto  localization.proto  localization_status.proto  pose.proto
map_msgs/: map.proto
monitor_msgs/: monitor_log.proto
openbot_bridge/audio_msgs/: audio.proto  audio_common.proto
openbot_bridge/basic_msgs/: direction.proto  drive_event.proto  drive_state.proto  error_code.proto  geometry.proto  header.proto  pnc_point.proto  vehicle_id.proto  vehicle_signal.proto
openbot_bridge/chassis_msgs/: chassis.proto
openbot_bridge/common_msgs/: builtin_interfaces.proto  diagnostic_msgs.proto  direction.proto  drive_event.proto  drive_state.proto  error_code.proto  geometry.proto  geometry_msgs.proto  header.proto  nav_msgs.proto  pcl_msgs.proto  pnc_point.proto  sensor_msgs.proto  shape_msgs.proto  std_msgs.proto  trajectory_msgs.proto  vehicle_id.proto  vehicle_signal.proto  vision_msgs.proto  visualization_msgs.proto
openbot_bridge/config_msgs/: vehicle_config.proto
openbot_bridge/control_msgs/: control_cmd.proto
openbot_bridge/localization_msgs/: imu.proto  localization.proto  localization_status.proto  pose.proto
openbot_bridge/map_msgs/: map.proto
openbot_bridge/monitor_msgs/: monitor_log.proto  smart_recorder_status.proto  system_status.proto
openbot_bridge/perception_msgs/: perception_benchmark.proto  perception_camera.proto  perception_obstacle.proto
openbot_bridge/planning_msgs/: planning.proto
openbot_bridge/prediction_msgs/: prediction_obstacle.proto
openbot_bridge/ros2_msgs/: builtin_interfaces.proto  diagnostic_msgs.proto  geometry_msgs.proto  nav_msgs.proto  pcl_msgs.proto  sensor_msgs.proto  shape_msgs.proto  std_msgs.proto  trajectory_msgs.proto  vision_msgs.proto  visualization_msgs.proto
openbot_bridge/sensor_msgs/: gnss.proto  heading.proto  imu.proto  ins.proto  pointcloud.proto  radar.proto  radarpointcloud.proto  sensor_image.proto  ultrasonic_radar.proto
openbot_bridge/service_msgs/: control_service.proto  mapping_service.proto  robot_service.proto  ros2_service.proto  sensor_service.proto
openbot_bridge/simulation_msgs/: agent.proto
perception_msgs/: perception_benchmark.proto  perception_camera.proto  perception_obstacle.proto
planning_msgs/: planning.proto
prediction_msgs/: prediction_obstacle.proto
ros2_msgs/: builtin_interfaces.proto  diagnostic_msgs.proto  geometry_msgs.proto  nav_msgs.proto  pcl_msgs.proto  sensor_msgs.proto  shape_msgs.proto  std_msgs.proto  trajectory_msgs.proto  vision_msgs.proto  visualization_msgs.proto
sensor_msgs/: gnss.proto  heading.proto  imu.proto  ins.proto  pointcloud.proto  radar.proto  radarpointcloud.proto  sensor_image.proto  ultrasonic_radar.proto
service_msgs/: common_msgs.proto  control_service.proto  mapping_service.proto  perception_service.proto  planning_service.proto  robot_service.proto  ros2_service.proto  sensor_service.proto  system_service.proto  tasks_service.proto  vehicle_service.proto
simulation_msgs/: agent.proto
